--- a/src/assets/src/css/admin.css
+++ b/src/assets/src/css/admin.css
@@ -123,7 +123,7 @@ html body .sidenav li.logo a {
   padding-bottom: 10px;
   height: 120px;
   text-align: center;
-  background-image: url(../images/logo_nav.png);
+  background-image: url(../img/logo_nav.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: calc(100% - 32px);
