--- a/src/assets/src/css/admin.less
+++ b/src/assets/src/css/admin.less
@@ -131,7 +131,7 @@ html{
                         padding-bottom: 10px;
                         height: 120px;
                         text-align: center;
-                        background-image: url(../images/logo_nav.png);
+                        background-image: url(../img/logo_nav.png);
                         background-repeat: no-repeat;
                         background-position: center;
                         background-size: calc(100% - 32px);
