--- a/src/assets/src/css/admin.less
+++ b/src/assets/src/css/admin.less
@@ -59,6 +59,11 @@ html{
         header{
             nav{
                 background-color: @company-akcent-color;
+                .breadcrumb.truncate{
+                    @media only screen and (min-width: 993px){
+                        display: inline;
+                    }
+                }
             }
         }
 
